--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
         <div class="slider">
           <!-- Slide 1 -->
             <div class="slide" id="slide-1">
-              <img src="Dog.jpg" alt="Dog in forest">
+              <img src="Images/Dog.jpg" alt="Dog in forest">
               <a href="#slide-4" class="arrow prev">&#10094;</a>
               <a href="#slide-2" class="arrow next">&#10095;</a>
             </div>
 
             <!-- Slide 2 -->
             <div class="slide" id="slide-2">
-              <img src="DogGettingBath.jpg" alt="Dog getting a bath">
+              <img src="Images/DogGettingBath.jpg" alt="Dog getting a bath">
               <a href="#slide-1" class="arrow prev">&#10094;</a>
               <a href="#slide-3" class="arrow next">&#10095;</a>
             </div>
 
             <!-- Slide 3 -->
             <div class="slide" id="slide-3">
-              <img src="LittleDogGettingGroomed.jpg" alt="Dog getting groomed">
+              <img src="Images/LittleDogGettingGroomed.jpg" alt="Dog getting groomed">
               <a href="#slide-2" class="arrow prev">&#10094;</a>
               <a href="#slide-4" class="arrow next">&#10095;</a>
             </div>
 
             <!-- Slide 4 (new) -->
             <div class="slide" id="slide-4">
-              <img src="DogsinBoardingKennel.jpg" alt="Happy dog">
+              <img src="Images/DogsinBoardingKennel.jpg" alt="Happy dog">
               <a href="#slide-3" class="arrow prev">&#10094;</a>
               <a href="#slide-1" class="arrow next">&#10095;</a>
             </div>
@@ -93,7 +93,7 @@
     <h1>Our Services</h1>
     <div class="services-grid">
       <div class="service-card">
-        <img src="DogsinBoardingKennel.jpg" alt="Dogs in boarding kennels">
+        <img src="Images/DogsinBoardingKennel.jpg" alt="Dogs in boarding kennels">
         <div class="service-content">
           <h2>Boarding</h2>
           <p>Overnight stays in clean, climate-controlled kennels with daily care and attention.</p>
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="service-card">
-        <img src="LittleDogGettingATrim.jpg" alt="Dog getting hair trimmed">
+        <img src="Images/LittleDogGettingATrim.jpg" alt="Dog getting hair trimmed">
         <div class="service-content">
           <h2>Grooming</h2>
           <p>Professional grooming services including baths, breed-specific haircuts, nail trimming, and more; ensuring every dog looks and feels their best!</p>
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="service-card">
-        <img src="DogGettingGroomed.jpg" alt="Dog getting a bath">
+        <img src="Images/DogGettingGroomed.jpg" alt="Dog getting a bath">
         <div class="service-content">
           <h2>Bath & Deshedding</h2>
           <p>Thorough bathing and deshedding treatments to keep your dog's coat clean, soft, and free of excess hair; Perfect for reducing shedding and promoting healthy skin!</p>
@@ -123,7 +123,7 @@
         </div>
       </div>
       <div class="service-card">
-        <img src="DogGettinsNailsCut.jpg" alt="Small dog getting nails cut">
+        <img src="Images/DogGettinsNailsCut.jpg" alt="Small dog getting nails cut">
         <div class="service-content">
           <h2>Nails & Teeth Cleaning</h2>
           <p>Gentle nail trimming and teeth cleaning to maintain your dog's hygiene overall healthy!</p>
@@ -134,7 +134,7 @@
       </div>
       <!-- Card 5 -->
       <div class="service-card">
-        <img src="DogInCar.jpg" alt="Dog in a car">
+        <img src="Images/DogInCar.jpg" alt="Dog in a car">
         <div class="service-content">
           <h2>Pickup & Dropoff</h2>
           <p>We offer convenient pickup and drop-off services to make your pet's visit stress-free. For boarding,
@@ -143,7 +143,7 @@
       </div>
       <!-- Card 6 -->
       <div class="service-card">
-        <img src="TwoDogsPlaying.jpg" alt="Two small dogs playing outside">
+        <img src="Images/TwoDogsPlaying.jpg" alt="Two small dogs playing outside">
         <div class="service-content">
           <h2>Discounts</h2>
           <p>Take advantage of our special discount when your pet stays with us. While boarding, 
@@ -159,24 +159,24 @@
   <div class="container">
     <h2>Gallery</h2>
     <div class="masonry-gallery">
-      <img src="DogGettingDried (2).jpg" alt="Small dog getting dried with a towel">
-      <img src="DogChacingBall.jpg" alt="Dog chasing a tenis ball ">
-      <img src="DoginWoodswithWoman.jpg" alt="Woman hugging her dog in the woods">
-      <img src="DogOutsideJumping.jpg" alt="Small dog jumping in yard">
-      <img src="DogGettingTrim.jpg" alt="Large dog getting sprayed by groomer">
-      <img src="DogGettinsNailsCut.jpg" alt="Little dog getting its nails trimmed">
-      <img src="DogandCat.jpg" alt="Dog and cat lying down together">
-      <img src="SmilingDog.jpg" alt="Brown dog smiling">
-      <img src="WomanWalkingDog.jpg" alt="Woman walking her dog over a bridge">
-      <img src="DogOnBoat.jpg" alt="Dog on small boat">
-      <img src="DogUpClose.jpg" alt="Dog with touge out">
-      <img src="DogWithBall.jpg" alt="Dog with a ball in its mouth">
-      <img src="DogGettingCombed.jpg" alt="Dog getting combed">
-      <img src="DogGettingHaircut.jpg" alt="Dog getting a hair cut">
-      <img src="GroomerCuttingDogHair.jpg" alt="Groomer cut dogs hair">
-      <img src="TwoDogsPlaying.jpg" alt="Two small dogs playing together">
-      <img src="DogSittingOutside.jpg" alt="Small white dog sitting outside">
-      <img src="DogsinBoardingKennel.jpg" alt="Dogs in boarding kennels">
+      <img src="Images/DogGettingDried (2).jpg" alt="Small dog getting dried with a towel">
+      <img src="Images/DogChacingBall.jpg" alt="Dog chasing a tenis ball ">
+      <img src="Images/DoginWoodswithWoman.jpg" alt="Woman hugging her dog in the woods">
+      <img src="Images/DogOutsideJumping.jpg" alt="Small dog jumping in yard">
+      <img src="Images/DogGettingTrim.jpg" alt="Large dog getting sprayed by groomer">
+      <img src="Images/DogGettinsNailsCut.jpg" alt="Little dog getting its nails trimmed">
+      <img src="Images/DogandCat.jpg" alt="Dog and cat lying down together">
+      <img src="Images/SmilingDog.jpg" alt="Brown dog smiling">
+      <img src="Images/WomanWalkingDog.jpg" alt="Woman walking her dog over a bridge">
+      <img src="Images/DogOnBoat.jpg" alt="Dog on small boat">
+      <img src="Images/DogUpClose.jpg" alt="Dog with touge out">
+      <img src="Images/DogWithBall.jpg" alt="Dog with a ball in its mouth">
+      <img src="Images/DogGettingCombed.jpg" alt="Dog getting combed">
+      <img src="Images/DogGettingHaircut.jpg" alt="Dog getting a hair cut">
+      <img src="Images/GroomerCuttingDogHair.jpg" alt="Groomer cut dogs hair">
+      <img src="Images/TwoDogsPlaying.jpg" alt="Two small dogs playing together">
+      <img src="Images/DogSittingOutside.jpg" alt="Small white dog sitting outside">
+      <img src="Images/DogsinBoardingKennel.jpg" alt="Dogs in boarding kennels">
     </div>
   </div>
 </section>
